--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-You're viewing this the wrong way. [Click here to see this as a webpage](https://schultzmichael.github.io/)
+You're viewing this the wrong way. [Click here to see this as a webpage](https://schultzmichael.github.io/).
